# libs/auth-session/src/main/java/de/mathejungalt/authsessions/api/AuthenticatedUser.java
@@ -20,5 +20,5 @@ public class AuthenticatedUser {
 
     private String fullName;
 
-    private Set<String> roles;
+    private Set<String> berechtigungen;
 }
